<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="pbl2.cursoandroid.com.pbl2.Formulario"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_de_alunos"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/NomeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:inputType="" />

    <TextView
        android:id="@+id/txtAnoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ano"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/AnoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView
        android:id="@+id/txtSemestreId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semestre"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/SemestreId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <TextView
        android:id="@+id/txtParticipacaoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participa_o"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RatingBar
        android:id="@+id/ParticipacaoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:numStars="5" />
    <TextView
        android:id="@+id/txtPresencaId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presen_a"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RatingBar
        android:id="@+id/PresencaId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:numStars="5" />

    <TextView
        android:id="@+id/txtComprometimentoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presen_a2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RatingBar
        android:id="@+id/ComprometimentoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:numStars="5" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:id="@+id/botaoCadastrarId"/>
</LinearLayout>
    </ScrollView>