<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pbl2.cursoandroid.com.pbl2.AlunosActivity">

    <ImageView
        android:id="@+id/imgAddAlunoId"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="83dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="91dp"
        android:contentDescription="@string/add"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgAddAlunoId"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/imgAddAlunoId"
        android:layout_toRightOf="@+id/imgAddAlunoId"
        android:text="@string/Addalunos"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imgBuscarAluno"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/imgAddAlunoId"
        android:layout_alignStart="@+id/imgAddAlunoId"
        android:layout_below="@+id/imgAddAlunoId"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/lupa"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/imgBuscarAluno"
        android:layout_marginTop="15dp"
        android:text="@string/consulta"
        android:textSize="18sp" />
</RelativeLayout>
